# PygameVideogameMaker

./: .gitignore  MANIFEST.in  PygameTemplate.pygame  README-es.md  README.md  TheEntityEnvironmentModel  deploy_to_console.sh  make_vendor.sh  pyproject.toml  send_to_trimui.sh  trimuiSandbox.pygame
.github/workflows/: python-package.yml
configs/: input_tester_joystick.json  settings.toml
configs/compositions/: editor_export.eei.json
configs/controllers/: generic.toml
docs/: eei_composition_format.md
game/: cli.py  main.py
game/compositions/: loader.py
game/configs/: settings.toml
game/configs/compositions/: editor_export.eei.json
game/core/: app.py  audio.py  clock.py  config.py  core_model  resources.py  video.py
game/docs/: CreatingEntitiesAndEnvironments.en.md  CreatingEntitiesAndEnvironments.md  TheEntityEnvironmentModel.md  eei_composition_format.md
game/editor/: model.py  registry.py
game/entities/: __init__.py  base.py  collider.py  eye.py  mass.py  mouth.py  platforms.py  playable.py  sprite_collider.py  spyke_player.py  visible_mass.py  void.py
game/entities/core/: __init__.py  base.py  collider.py  mass.py  sprite_collider.py  visible_mass.py
game/entities/custom/: __init__.py  _template_entity.py  galagos_ear.py
game/entities/misc/: __init__.py  void.py
game/entities/players/: __init__.py  playable.py  spyke_player.py
game/environments/: __init__.py  background.py  base.py  black_zone.py  force.py  music.py  void.py
game/input/: bindings.py  controller_profile.py
game/scenes/: __init__.py  assets_demo.py  assets_test.py  base.py  blank.py  editor.py  editor_panels.py  input_demo.py  input_tester.py  main.py
