[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame-editor"
authors = [{ name = "Diego Delgado Chaves", email = "diedelcha@gmail.com" }]
version = "0.1.0"
description = "Minimal Pygame scaffold (window + loop)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pygame>=2.6.1",
  "rich>=13",
]

[project.scripts]
pygame-editor = "game.cli:main"

[tool.setuptools]
packages = ["game", "game.core", "game.scenes"]
